<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_location"
            android:text="@string/determine_your_location"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/get_location"
            android:enabled="true"
            android:focusable="true"
            android:text= "@string/get_location"
            android:layout_marginTop="16dp"
    />

    <TextView
            android:id="@+id/coordinateLL"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_region"
            android:text="@string/determine_your_region"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/get_region"
            android:text="@string/get_region"
            android:enabled="true"
            android:focusable="true"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/yourRegionIs"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />



    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/find_offices"
            android:text="@string/determine_your_offices"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/get_offices"
            android:enabled="true"
            android:focusable="true"
            android:text="@string/get_offices"
            android:layout_marginTop="16dp"
    />





</LinearLayout>